# GrafHazi1

./: .gitignore  CMakeLists.txt  Skeleton.cpp
src/: camera.h  circle.h  ground.h  spline.h
